--- a/mysite/assets/scss/modules/sidemenu/_main.scss
+++ b/mysite/assets/scss/modules/sidemenu/_main.scss
@@ -1,4 +1,5 @@
 $left-pad: 20px;
+$right-pad: 200px;
 
 .mobile-sidemenu {
   background-color: palette-get(na-black);
@@ -12,13 +13,12 @@ $left-pad: 20px;
   }
 
   &__program-title {
-    position:absolute;
     margin-top: 10px;
     margin-left: $left-pad;
     width: $max-sidemenu-width / 2;
     background-color: palette-get(na-white);
     padding: 7px 7px 1.5px 7px;
-    
+    float:left;
     &__title {
       font-size:13px;
       font-color:palette-get(na-black);
@@ -27,10 +27,10 @@ $left-pad: 20px;
   }
 
   &__toggle {
-    position:absolute;
+    float:right;
+    margin-right: $right-pad;
+    margin-top: 30px;
     z-index: 1100;
-    top: 30px;
-    right: 120px;
     color:white;
     font-weight:bold;
   }
